--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "sass --watch --update --style=expanded src/scss:assets/css --watch indexpages",
-        "build": "sass --no-source-map --style=compressed src/scss:assets/css --watch src"
+        "build": "sass --no-source-map --style=compressed src/scss:assets/css --watch src --watch indexpages"
     },
     "author": "Adam",
     "license": "ISC",
