--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "A simple sass compile config.",
     "main": "index.js",
     "scripts": {
-        "dev": "sass --watch --update --style=expanded src/scss:assets/css --watch indexpages",
-        "build": "sass --no-source-map --style=compressed src/scss:assets/css --watch src --watch indexpages"
+        "dev": "sass --watch --update --style=expanded src/scss:public/css ",
+        "build": "sass --no-source-map --style=compressed src/scss:assets/css"
     },
     "author": "Adam",
     "license": "ISC",
